--- a/tests/PluginLibraryTests/PluginLibraryTests.csproj
+++ b/tests/PluginLibraryTests/PluginLibraryTests.csproj
@@ -47,6 +47,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\EditorPrototype\EditorPrototype.csproj">
+      <Project>{1dcb1d77-ab11-404c-bce4-8eb7bf8f549d}</Project>
+      <Name>EditorPrototype</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\PluginLibrary\PluginLibrary.csproj">
       <Project>{8b9c8d76-65b3-4a01-9d6f-b6192a823642}</Project>
       <Name>PluginLibrary</Name>
