--- a/tests/Repo.Tests/App.config
+++ b/tests/Repo.Tests/App.config
@@ -6,8 +6,9 @@
     
   <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
   <dependentAssembly>
+    <Paket>True</Paket>
     <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-3.8.0.0" newVersion="3.9.0.0" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="3.9.0.0" />
   </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
