--- a/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
+++ b/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C57410A1-A86F-418B-9AC7-38249450C497}</ProjectGuid>
+    <ProjectGuid>{6E5F1B5D-F165-4CEC-A240-8887EBD28E3B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SamplesPlugin</RootNamespace>
-    <AssemblyName>SamplesPlugin</AssemblyName>
+    <RootNamespace>EditorPluginInterfaces</RootNamespace>
+    <AssemblyName>EditorPluginInterfaces</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\SamplesPlugin.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,11 +29,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\SamplesPlugin.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MonoRelease|AnyCPU'">
-    <OutputPath>bin\MonoRelease\</OutputPath>
-    <DocumentationFile>bin\MonoRelease\SamplesPlugin.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,18 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IConsole.cs" />
+    <Compile Include="IPlugin.cs" />
+    <Compile Include="IPalette.cs" />
+    <Compile Include="PluginConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SamplePlugin.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\PluginLibrary\PluginLibrary.csproj">
-      <Project>{8b9c8d76-65b3-4a01-9d6f-b6192a823642}</Project>
-      <Name>PluginLibrary</Name>
-    </ProjectReference>
+    <Compile Include="IScene.cs" />
+    <Compile Include="Toolbar\IButton.cs" />
+    <Compile Include="Toolbar\ICommand.cs" />
+    <Compile Include="Toolbar\IMenu.cs" />
+    <Compile Include="Toolbar\IToolbar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
