--- a/src/PluginManager/PluginManager.csproj
+++ b/src/PluginManager/PluginManager.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{8B9C8D76-65B3-4A01-9D6F-B6192A823642}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PluginLibrary</RootNamespace>
-    <AssemblyName>PluginLibrary</AssemblyName>
+    <RootNamespace>PluginManager</RootNamespace>
+    <AssemblyName>PluginManager</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\PluginLibrary.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\PluginManager.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,11 +30,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\PluginLibrary.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\PluginManager.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MonoRelease|AnyCPU'">
     <OutputPath>bin\MonoRelease\</OutputPath>
-    <DocumentationFile>bin\MonoRelease\PluginLibrary.xml</DocumentationFile>
+    <DocumentationFile>bin\MonoRelease\PluginManager.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,17 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IPlugin.cs" />
-    <Compile Include="MainInterfaces\Console\IConsole.cs" />
-    <Compile Include="MainInterfaces\Palette\IPalette.cs" />
-    <Compile Include="MainInterfaces\PluginConfig\PluginConfig.cs" />
-    <Compile Include="MainInterfaces\Scene\IScene.cs" />
-    <Compile Include="MainInterfaces\Toolbar\IButton.cs" />
-    <Compile Include="MainInterfaces\Toolbar\ICommand.cs" />
-    <Compile Include="MainInterfaces\Toolbar\IMenu.cs" />
-    <Compile Include="MainInterfaces\Toolbar\IToolbar.cs" />
     <Compile Include="PluginLauncher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
+      <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
+      <Name>EditorPluginInterfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
