--- a/src/WpfEditor/WpfEditor.csproj
+++ b/src/WpfEditor/WpfEditor.csproj
@@ -92,28 +92,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Controller.cs" />
-    <Compile Include="Graph.cs" />
-    <Compile Include="Model.cs" />
+    <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Model\Graph.cs" />
+    <Compile Include="Model\Model.cs" />
     <Compile Include="Constraints\Constraints.cs" />
     <Compile Include="Constraints\ConstraintsItem.cs" />
     <Compile Include="Constraints\ConstraintsValues.cs" />
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
-    <Compile Include="Models\BoolToColorConverter.cs" />
-    <Compile Include="Models\InternalConsole\AppConsole.cs" />
-    <Compile Include="Models\ControlFactory\ControlFactoryCreator.cs" />
-    <Compile Include="Models\ControlFactory\IControlFactory.cs" />
-    <Compile Include="Models\EdgeBlueprint.cs" />
-    <Compile Include="Models\EditorObjectManager.cs" />
-    <Compile Include="Models\ImageLoader.cs" />
-    <Compile Include="Models\Toolbar\Toolbar.cs" />
-    <Compile Include="Models\ValueToImageConverter.cs" />
+    <Compile Include="Controls\Console\AppConsole.cs" />
+    <Compile Include="Controls\ControlFactoryCreator.cs" />
+    <Compile Include="Controls\IControlFactory.cs" />
+    <Compile Include="View\EdgeBlueprint.cs" />
+    <Compile Include="View\EditorObjectManager.cs" />
+    <Compile Include="Controls\Toolbar\Toolbar.cs" />
     <Compile Include="Constraints\RepoInfo.cs" />
     <Page Include="Constraints\ConstraintsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -121,24 +118,23 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\DataEdge.cs" />
-    <Compile Include="Models\DataVertex.cs" />
-    <Compile Include="Models\GraphAreaExample.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="ViewModel\EdgeViewModel.cs" />
+    <Compile Include="ViewModel\NodeViewModel.cs" />
+    <Compile Include="View\GraphArea.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Templates\EditorTemplate.xaml">
+    <Page Include="View\Templates\EditorTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Templates\GeneralTemplate.xaml">
+    <Page Include="View\Templates\GeneralTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\GraphExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -202,20 +198,20 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Pictures\enginesForwardBlock.png" />
-    <Resource Include="Pictures\finalBlock.png" />
-    <Resource Include="Pictures\initialBlock.png" />
-    <Resource Include="Pictures\timerBlock.png" />
+    <Resource Include="View\Pictures\enginesForwardBlock.png" />
+    <Resource Include="View\Pictures\finalBlock.png" />
+    <Resource Include="View\Pictures\initialBlock.png" />
+    <Resource Include="View\Pictures\timerBlock.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Pictures\enginesBackwardBlock.png" />
-    <Resource Include="Pictures\enginesStopBlock.png" />
+    <Resource Include="View\Pictures\enginesBackwardBlock.png" />
+    <Resource Include="View\Pictures\enginesStopBlock.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Pictures\edge.png" />
+    <Resource Include="View\Pictures\edge.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Pictures\Vertex.png" />
+    <Resource Include="View\Pictures\vertex.png" />
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.5.2'">
