--- a/src/WpfEditor/WpfEditor.csproj
+++ b/src/WpfEditor/WpfEditor.csproj
@@ -40,9 +40,9 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>
-    </CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\WpfEditor.xml</DocumentationFile>
+    <CodeAnalysisRuleSet>WpfEditor.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -100,8 +100,6 @@
     <Compile Include="Constraints\ConstraintsValues.cs" />
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
     <Compile Include="Controls\Console\AppConsole.cs" />
-    <Compile Include="Controls\ControlFactoryCreator.cs" />
-    <Compile Include="Controls\IControlFactory.cs" />
     <Compile Include="View\EdgeBlueprint.cs" />
     <Compile Include="View\EditorObjectManager.cs" />
     <Compile Include="Controls\Toolbar\Toolbar.cs" />
