--- a/src/WpfEditor/WpfEditor.csproj
+++ b/src/WpfEditor/WpfEditor.csproj
@@ -93,13 +93,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Controls\Console\AppConsole.xaml.cs">
+      <DependentUpon>AppConsole.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\Graph.cs" />
     <Compile Include="Model\Model.cs" />
     <Compile Include="Constraints\Constraints.cs" />
     <Compile Include="Constraints\ConstraintsItem.cs" />
     <Compile Include="Constraints\ConstraintsValues.cs" />
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
-    <Compile Include="Controls\Console\AppConsole.cs" />
+    <Compile Include="Controls\Console\AppConsoleViewModel.cs" />
     <Compile Include="View\EdgeBlueprint.cs" />
     <Compile Include="View\EditorObjectManager.cs" />
     <Compile Include="Controls\Toolbar\Toolbar.cs" />
@@ -107,6 +110,10 @@
     <Page Include="Constraints\ConstraintsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Console\AppConsole.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
