--- a/src/WpfEditor/WpfEditor.csproj
+++ b/src/WpfEditor/WpfEditor.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Controls\Console\AppConsole.xaml.cs">
       <DependentUpon>AppConsole.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ModelSelector\ModelSelector.xaml.cs">
+      <DependentUpon>ModelSelector.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Palette\DragAndDropFeedback.xaml.cs">
       <DependentUpon>DragAndDropFeedback.xaml</DependentUpon>
     </Compile>
@@ -116,6 +119,7 @@
     <Compile Include="Constraints\ConstraintsValues.cs" />
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
     <Compile Include="Controls\Console\AppConsoleViewModel.cs" />
+    <Compile Include="ViewModel\AttributeViewModel.cs" />
     <Compile Include="View\EdgeBlueprint.cs" />
     <Compile Include="View\EditorObjectManager.cs" />
     <Compile Include="Controls\Toolbar\ToolbarViewModel.cs" />
@@ -125,6 +129,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\Console\AppConsole.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\ModelSelector\ModelSelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
